# ignite-data-toolkit

./: pyproject.toml
code/: __init__.py
code/he_segmentation/: __init__.py  infer_on_image.py
ignite_data_toolkit/: __init__.py
ignite_data_toolkit/he_segmentation/: __init__.py  evaluation.py  he_convenience_script.py  inference.py
ignite_data_toolkit/he_segmentation/docker/: Dockerfile  build.sh  run_inference_and_evaluation.sh  run_interactive.sh
ignite_data_toolkit/pdl1_detection/: nuclei_convenience.py  nuclei_test_set_inference.py  pdl1_convenience.py  pdl1_test_set_inference.py
ignite_data_toolkit/pdl1_detection/docker/: Dockerfile  build.sh  requirements.txt  run_inference_and_evaluation.sh  run_interactive.sh
ignite_data_toolkit/pdl1_detection/src/: __init__.py  eval_utils.py  inference.py  inference_utils.py
