[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ignite"
version = "0.1.0"
description = "Example modular python project"
readme = "README.md"
requires-python = ">=3.10"


[tool.setuptools]
package-dir = {"" = "ignite_data_toolkit"}

[tool.setuptools.packages.find]
where = ["ignite_data_toolkit"]
exclude = ["data*"]